--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,12 +25,18 @@ import(graphics)
 import(gt)
 import(gtsummary)
 import(maps)
-import(matrixcalc)
 import(msm)
-import(mvtnorm)
-import(reshape)
 import(spam)
 import(splines)
-import(stats)
-import(utils)
 import(viridis)
+importFrom(matrixcalc,is.positive.definite)
+importFrom(reshape,melt)
+importFrom(stats,cov)
+importFrom(stats,dnbinom)
+importFrom(stats,rbinom)
+importFrom(stats,reorder)
+importFrom(stats,rgamma)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,spline)
+importFrom(stats,var)
