--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,5 +33,7 @@ Suggests:
     knitr,
     rmarkdown,
     CorrMixed,
-    ape
+    ape,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
