--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,3 +37,5 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+URL: https://github.com/SumanM47/BSTZINB
+BugReports: https://github.com/SumanM47/BSTZINB/issues
