--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export(compute_NB_DIC)
 export(compute_ZINB_DIC)
 export(conv.test)
 export(get_adj_mat)
+export(print.DCMB)
+export(print.summ.DCMB)
 export(qRankPar)
 export(qRankParTop)
+export(summary.DCMB)
 import(BayesLogit)
 import(MCMCpack)
 import(boot)
@@ -30,6 +33,7 @@ import(spam)
 import(splines)
 import(viridis)
 importFrom(matrixcalc,is.positive.definite)
+importFrom(methods,is)
 importFrom(reshape,melt)
 importFrom(stats,cov)
 importFrom(stats,dnbinom)
